# sign_detection

./: .gitignore  LICENSE  README-en.md  README.md  package.xml  requirements.txt  setup.py  sign_detection.repos
bag/example.bag/: metadata.yaml
hyperparameter/: calc_centroid.py  calc_fpfh.py  calc_hyperparams.py  calc_multi_hyperparams.py  display_cluster.py  display_cluster_2d.py  display_pcd.py  display_pcd_2d.py
hyperparameter/pcd_bag/: count_pcd.sh  rename_pcd.sh
launch/: memo.txt  sign_detec.launch.xml
pcd2_converter/: pcd2ascii.py  pcd2ply.py
rviz2/: sing_rec.rviz
sign_detection/: functions.py  functions_fpfh.py  gui.py  main.py  read_temp.py  sign_detection.py  sign_detection2.py  sign_detection_fpfh.py
sing_detection/: sign_detection2.py
template_pcd/: bag1_edit.pcd  bag3_edit.pcd  nakaniwa2_bag_edit.pcd  ponta1.pcd  ppp_100.pcd  temp3.pcd  template_pcd2.pcd
