<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sign_detection</name>
  <version>0.0.0</version>
  <description>ROS2 package for detecting road-closed signs, designed for Task C of the Tsukuba Challenge.</description>
  <maintainer email="yutarop.storm.7@gmail.com">yutarop</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>std_msgs</depend>
  <depend>ament_index_python</depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>livox</exec_depend>
  <exec_depend>pcd_convert</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>
  <exec_depend>python3-open3d</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
